For 1.18.15:
	- working on spot and directional Lights.

	- headlight moved to 100 behind current camera postion, makes for smoother
	  shading of triangles whose vertexen are at corners (or out of view) of current
	  view frustum

	  PixelTexture nodes - default image caused a segfault
For 1.18.14:
	- setting SFNodes from Javascript fixed. (was setting node to NULL)

	- X3DParser - SFStrings were not being copied correctly.

	- Textures - if <=256x256, GL_LINEAR, else GL_NEAREST

	- Background - fixed bug where groundColors > #groundAngles - make last angle PI.
	  (John Stewart)

	- reading large files - malloc now bufsize<<=1 to make reading linear, not quadratic.
	  (Charles Horn, Daniel Kraft)

	- VRML parser malloc bug for storing values in Vectors fixed.
	  (Daniel Kraft)

	- fixed material transparency in VRML Proto expansions
	  (John Stewart)

	- added initial ReWire (EAI in C) support.
	  (John Stewart)

	- OS X UI issues 
	  (Sarah Dumoulin)

For 1.18.13:
	- browser plugin code manipulation - improve loading of secondary files on local
	  (non-networked) machines.

	- texture, if 3 or 4 channels, ignores the diffuseColor (X3D Spec 17.2.2.3)

For 1.18.12:
	- Makefile.PL - DESTDIR in install tags for Gentoo build. (Hanno Bock)

	- soundengine work for 64 bit compiles. (Charles Horn)

	- change GL_LIGHT_MODEL_AMBIENT to 0,0,0,1 - removes default "scene" ambient lighting.

For 1.18.11:
	- OSX Build work.

	- New X3D Parser - does not yet handle:
		Scripts
		PROTOS
		EXTERNPROTOS
		PixelTextures.

	- SFColorSetHSV and SFColorGetHSV

For 1.18.10:
	- reviewing Javascript interfacing. Most SF* nodes should now pass
	  correctly.

	- ambientIntensity - Shape material now uses the ambientIntensity value,
	  and lights set ambientIntensity as per their node values, now.

	- PointLight status now same as other lights - uses lightState.

	- memory corruption in "default MF*" values fixed in createNewX3DNode.

	- memory leak in OcclusionQueries fixed.
