@@ -9,7 +9,7 @@
 #define __HEADERS_H__
 
 #include <stdio.h>
-
+#include <stdlib.h>
 #include <stdint.h>
 #include <math.h>
 #include <stddef.h>
